-moved courses api call to course service

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -13,4 +13,4 @@
     </md-not-found>
 </md-autocomplete>
 
-<md-button class="md-raised" ng-click="getCourseList(selected, searchText)">Search</md-button>
+<md-button class="md-raised" ng-click="getCourseList(currentSemester, searchText)">Search</md-button>
