--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -8,11 +8,11 @@
     <md-content ng-view ng-cloak></md-content>
 
     <!-- navigation -->
-    <div class="bottom-navigation">
-        <md-tabs md-stretch-tabs="always">
-            <md-tab label="Tab #1"></md-tab>
-            <md-tab label="Tab #2"></md-tab>
-            <md-tab label="Tab #3"></md-tab>
-        </md-tabs>
-    </div>
+    <!--<div class="bottom-navigation">-->
+        <!--<md-tabs md-stretch-tabs="always">-->
+            <!--<md-tab label="Tab #1"></md-tab>-->
+            <!--<md-tab label="Tab #2"></md-tab>-->
+            <!--<md-tab label="Tab #3"></md-tab>-->
+        <!--</md-tabs>-->
+    <!--</div>-->
 </div>
