--- a/client/css/style.css
+++ b/client/css/style.css
@@ -11,15 +11,15 @@ app > #loading {
     margin: 0 auto;
 }
 
-.bottom-navigation{
+.bottom-navigation {
     position: fixed;
-    bottom:0;
-    width:100%;
+    bottom: 0;
+    width: 100%;
     max-width: 1024px;
 }
 
 /* home */
-.semester-span{
+.semester-span {
     border-bottom: 2px solid #FF4081;
     cursor: pointer;
     /* remove dotted border onclick event */
@@ -35,11 +35,31 @@ app > #loading {
     margin: 0;
 }
 
+.delete-btn-offset-15 {
+    top: 12px;
+}
+
+.event {
+    height: 72px;
+    padding: 0 6px;
+    background-color: #aed581;
+}
+
+.event-offset-15 {
+    margin-top: 12px;
+}
+
+.event-offset-30 {
+    margin-top: 24px;
+}
+
+.event-offset-45 {
+    margin-top: 36px;
+}
+
 .event-ctn {
     max-width: 100px;
-    height: 100px;
-    padding: 5px;
-    background-color: #aed581;
+    height: 48px;
     position: relative;
 }
 
@@ -51,6 +71,10 @@ app > #loading {
     cursor: pointer;
 }
 
-.event-ctn a:hover{
+.event-ctn a:hover {
     text-decoration: underline;
+}
+
+.my-tr {
+    max-height: 48px;
 }
