--- a/client/templates/courses.html
+++ b/client/templates/courses.html
@@ -30,8 +30,8 @@
 <md-table-pagination md-limit="query.limit" md-page="query.page" md-total="{{ courses.length }}"
                      md-page-select></md-table-pagination>
 
-<md-button class="md-raised" ng-click="goBack()">Back</md-button>
+<!--<md-button class="md-raised" ng-click="goBack()">Back</md-button>-->
 <md-button class="md-raised" ng-click="clearAll()">Clear all</md-button>
-<md-button class="md-raised" ng-click="showOverview(selected)">Overview</md-button>
+<!--<md-button class="md-raised" ng-click="showOverview(selected)">Overview</md-button>-->
 
 <pre>{{selected | json}}</pre>
