--- a/client/css/style.css
+++ b/client/css/style.css
@@ -11,11 +11,16 @@ app > #loading {
     margin: 0 auto;
 }
 
+.content-ctn {
+    margin-bottom: 50px;
+}
+
 .bottom-navigation {
     position: fixed;
     bottom: 0;
     width: 100%;
     max-width: 1024px;
+    background-color: #FFFFFF;
 }
 
 /* home */
