--- a/client/templates/courses.html
+++ b/client/templates/courses.html
@@ -34,4 +34,4 @@
 <md-button class="md-raised" ng-click="clearAll()">Clear all</md-button>
 <!--<md-button class="md-raised" ng-click="showOverview(selected)">Overview</md-button>-->
 
-<pre>{{selected | json}}</pre>
+<!--<pre>{{selected | json}}</pre>-->
