--- a/client/templates/details.html
+++ b/client/templates/details.html
@@ -1,3 +1,7 @@
+<div class="icon-ctn">
+    <md-icon ng-click="closeDetails()" md-svg-src='img/icons/ic_clear_black_48px.svg'></md-icon>
+</div>
+
 <h2>Details</h2>
 
 <p>Gguid des Courses: {{ gguid }}</p>
