--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -1,18 +1,17 @@
 <div class="app-container">
     <!-- top section -->
-    <md-toolbar layout="row">
-        <h1>RWTH Courses</h1>
+    <md-toolbar style="background-color: transparent;">
+
     </md-toolbar>
 
     <!-- main content -->
-    <md-content ng-view ng-cloak></md-content>
+    <md-content ng-view ng-cloak ng-style="{'background':'transparent'}"></md-content>
 
     <!-- navigation -->
     <div class="bottom-navigation">
         <md-tabs md-stretch-tabs="always">
-            <md-tab label="Tab #1"></md-tab>
-            <md-tab label="Tab #2"></md-tab>
-            <md-tab label="Tab #3"></md-tab>
+            <md-tab label="All Courses"></md-tab>
+            <md-tab label="Your Courses"></md-tab>
         </md-tabs>
     </div>
 </div>
