--- a/client/templates/courses.html
+++ b/client/templates/courses.html
@@ -3,40 +3,47 @@
     <input type="text" ng-model="query.search">
 </md-input-container>
 
-<md-table-container>
-    <table md-table md-row-select ng-model="selected">
-        <thead md-head md-order="query.order">
-        <tr md-row>
-            <th md-column md-order-by="name"><span>Name</span></th>
-            <th md-column md-order-by="lecturer"><span>Lecturer</span></th>
-            <th md-column md-order-by="institute">Institute</th>
-            <th md-column md-order-by="subsection">Subsection</th>
-            <th md-column md-order-by="creditpoints" md-numeric>Creditpoints</th>
-        </tr>
-        </thead>
-        <tbody md-body>
-        <tr md-row md-select="course.gguid" md-select-id="{{course.gguid}}"
-            ng-repeat="course in courses | orderBy: query.order | filterBy: ['name', 'lecturer', 'institute', 'subsection', 'creditpoints']: query.search | limitTo: query.limit: (query.page - 1) * query.limit">
-            <td md-cell>
-                <a ng-click="showDetails(course.gguid)">
-                    <md-tooltip md-direction="top">Show details</md-tooltip>
-                    {{course.name}}
-                </a>
-            </td>
-            <td md-cell>{{course.lecturer}}</td>
-            <td md-cell>{{course.contact[0].address.department}}</td>
-            <td md-cell>{{course.subfield}}</td>
-            <td md-cell>{{course.ects}}</td>
-        </tr>
-        </tbody>
-    </table>
-</md-table-container>
+<p ng-show="loading">Loading...</p>
 
-<md-table-pagination md-limit="query.limit" md-page="query.page" md-total="{{ courses.length }}"
-                     md-page-select></md-table-pagination>
+<div ng-show="!loading">
+    <md-table-container>
+        <table md-table md-row-select ng-model="selected">
+            <thead md-head md-order="query.order">
+            <tr md-row>
+                <th md-column md-order-by="name"><span>Name</span></th>
+                <th md-column md-order-by="lecturer"><span>Lecturer</span></th>
+                <th md-column md-order-by="institute">Institute</th>
+                <th md-column md-order-by="subsection">Subsection</th>
+                <th md-column md-order-by="creditpoints" md-numeric>Creditpoints</th>
+            </tr>
+            </thead>
+            <tbody md-body>
+            <tr md-row md-select="course.gguid" md-select-id="{{course.gguid}}"
+                ng-repeat="course in courses | orderBy: query.order | filterBy: ['name', 'lecturer', 'institute', 'subsection', 'creditpoints']: query.search | limitTo: query.limit: (query.page - 1) * query.limit">
+                <td md-cell>
+                    <a ng-click="showDetails(course.gguid)">
+                        <md-tooltip md-direction="top">Show details</md-tooltip>
+                        {{course.name}}
+                    </a>
+                </td>
+                <td md-cell>{{course.lecturer}}</td>
+                <td md-cell>{{course.contact[0].address.department}}</td>
+                <td md-cell>{{course.subfield}}</td>
+                <td md-cell>{{course.ects}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </md-table-container>
 
-<!--<md-button class="md-raised" ng-click="goBack()">Back</md-button>-->
-<md-button class="md-raised" ng-click="clearAll()">Clear all</md-button>
-<!--<md-button class="md-raised" ng-click="showOverview(selected)">Overview</md-button>-->
+    <md-table-pagination md-limit="query.limit" md-page="query.page" md-total="{{ courses.length }}"
+                         md-page-select></md-table-pagination>
+
+    <md-button class="md-raised" ng-click="goBack()">Back</md-button>
+    <md-button class="md-raised" ng-click="clearAll()">Clear all</md-button>
+    <md-button ng-disabled="disableBtn" class="md-raised" ng-click="showSchedule()">Schedule</md-button>
+</div>
 
 <!--<pre>{{selected | json}}</pre>-->
+
+<!--<pre>{{ $parent.courseListExist }}</pre>-->
+<!--<pre>{{ $parent }}</pre>-->
