--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -14,3 +14,7 @@
 </md-autocomplete>
 
 <md-button class="md-raised" ng-click="getCourseList(currentSemester, searchText)">Search</md-button>
+
+{{ currentSemester }}
+<br>
+{{ searchText }}
