--- a/client/templates/overview.html
+++ b/client/templates/overview.html
@@ -40,4 +40,4 @@
     </table>
 </md-table-container>
 
-<!--<md-button class="md-raised" ng-click="goBack()">Back</md-button>-->
+<md-button class="md-raised" ng-click="goBack()">Course list</md-button>
