--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -1,4 +1,5 @@
-<div class="app-container">
+<div class="app-container" layout="column">
+
     <!-- top section -->
     <md-toolbar layout="row">
         <h1>RWTH Courses</h1>
@@ -9,11 +10,11 @@
 
     <!-- navigation -->
     <!--<div class="bottom-navigation">-->
-        <!--<md-tabs md-stretch-tabs="always">-->
-            <!--<md-tab md-active="courseActive('/')" ng-click="goToRoute('home')" label="Home"></md-tab>-->
-            <!--<md-tab md-active="courseActive('/courses')" ng-click="goToRoute('courses')" label="Courses List"></md-tab>-->
-            <!--<md-tab md-active="courseActive('/overview')" ng-disabled="selectedCoursesExist" ng-click="goToRoute('overview')" label="Schedule"></md-tab>-->
-        <!--</md-tabs>-->
+    <!--<md-tabs md-stretch-tabs="always">-->
+    <!--<md-tab md-active="courseActive('/')" ng-click="goToRoute('home')" label="Home"></md-tab>-->
+    <!--<md-tab md-active="courseActive('/courses')" ng-click="goToRoute('courses')" label="Courses List"></md-tab>-->
+    <!--<md-tab md-active="courseActive('/overview')" ng-disabled="selectedCoursesExist" ng-click="goToRoute('overview')" label="Schedule"></md-tab>-->
+    <!--</md-tabs>-->
     <!--</div>-->
 </div>
 
