--- a/client/templates/courses.html
+++ b/client/templates/courses.html
@@ -18,7 +18,7 @@
                 <th md-column md-order-by="subsection">Subsection</th>
                 <th md-column md-order-by="ects" md-numeric>ECTS</th>
                 <th md-column md-order-by="contact"><span>Lecturer</span></th>
-                <th md-column md-order-by="institute">Institute</th>
+                <th md-column md-order-by="units">Unit</th>
             </tr>
             </thead>
 
@@ -31,7 +31,7 @@
                 <td md-cell>
                     <a ng-click="showDetails(course.gguid)">
                         <md-tooltip md-direction="top">Show details</md-tooltip>
-                        {{course.name | course}}
+                        {{course.name | length:50}}
                     </a>
                 </td>
                 <td md-cell>{{course.subfield}}</td>
@@ -39,7 +39,9 @@
                 <td md-cell>
                     <pre>{{course.contact | lecturers}}</pre>
                 </td>
-                <td md-cell>{{course.contact[0].address.department}}</td>
+                <td md-cell>
+                    <pre>{{course.units | unique | length:50 | join: ',\n'}}</pre>
+                </td>
             </tr>
             </tbody>
         </table>
