--- a/client/css/style.css
+++ b/client/css/style.css
@@ -40,12 +40,16 @@ loading > div {
     min-width: 0px;
     position: absolute;
     bottom: 0;
-    right: 0;
+    right: -5px;
     margin: 0;
 }
 
 .delete-btn-offset-15 {
     top: 12px;
+}
+
+.delete-btn-offset-30 {
+    top: 24px;
 }
 
 .event {
@@ -109,4 +113,19 @@ a:hover {
     margin: 50px auto;
     box-shadow: 1px 1px 5px rgb(170, 170, 170);
     padding: 10px;
+}
+
+.no-padding {
+    padding: 0 !important;
+}
+
+.overview-name-ctn {
+    padding-right: 15px;
+}
+
+.overview-name-ctn > a {
+    hyphens: auto;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
 }
