--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -1,22 +1,17 @@
-<div class="app-container" layout="column">
+<div layout="column" layout-fill>
 
     <!-- top section -->
-    <md-toolbar layout="row">
-        <h1>RWTH Courses</h1>
+    <md-toolbar class="md-medium-tall custom">
+        <div class="md-toolbar-tools">
+            <a href="#/">
+                <h1>RWTH Courses</h1>
+            </a>
+            <span flex></span>
+            <md-button>Button</md-button>
+        </div>
     </md-toolbar>
 
     <!-- main content -->
-    <md-content ng-view ng-cloak class="content-ctn"></md-content>
+    <md-content ng-view ng-cloak layout-padding></md-content>
 
-    <!-- navigation -->
-    <!--<div class="bottom-navigation">-->
-    <!--<md-tabs md-stretch-tabs="always">-->
-    <!--<md-tab md-active="courseActive('/')" ng-click="goToRoute('home')" label="Home"></md-tab>-->
-    <!--<md-tab md-active="courseActive('/courses')" ng-click="goToRoute('courses')" label="Courses List"></md-tab>-->
-    <!--<md-tab md-active="courseActive('/overview')" ng-disabled="selectedCoursesExist" ng-click="goToRoute('overview')" label="Schedule"></md-tab>-->
-    <!--</md-tabs>-->
-    <!--</div>-->
 </div>
-
-
-<!--ng-disabled="courseListExist"-->
