--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -12,6 +12,6 @@
     </md-toolbar>
 
     <!-- main content -->
-    <md-content ng-view ng-cloak layout-padding></md-content>
+    <md-content layout-padding ng-view ng-cloak></md-content>
 
 </div>
