--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,7 +1,7 @@
-<p>Searching for courses in <span class="semester-span" ng-click="changeSemester()">{{ currentSemester }}</span></p>
+<h2>What do you study?</h2>
 
 <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText"
-                 md-item-text="field" placeholder="Enter your field of study..." md-min-length="0"
+                 md-item-text="field" placeholder="My Amazing Study Field..." md-min-length="0"
                  md-items="field in querySearch(searchText)">
 
     <md-item-template>
@@ -13,8 +13,7 @@
     </md-not-found>
 </md-autocomplete>
 
-<md-button class="md-raised" ng-click="getCourseList(currentSemester, searchText)">Search</md-button>
+<p>Searching for courses in <span class="semester-span" ng-click="changeSemester()">{{ currentSemester }}</span></p>
 
-{{ currentSemester }}
-<br>
-{{ searchText }}
+
+<md-button class="md-raised" ng-click="getCourseList(currentSemester, searchText)">Search</md-button>
