time and week in unscheduled

--- a/client/templates/overview.html
+++ b/client/templates/overview.html
@@ -43,7 +43,7 @@
 <md-list class="unscheduled-ctn" ng-show="showUnscheduled()">
     <md-subheader class="md-no-sticky">These events don't have a specific time</md-subheader>
     <md-list-item ng-repeat="event in unscheduled track by $index">
-        <p>{{ event.name }}</p>
+        <p>{{ event.name }} | {{ event.events[0].weekday | week }} {{ event.events[0].start | time }}</p>
         <md-button class="delete-btn" ng-click="deleteCourse(event.gguid)">
             <md-tooltip md-direction="bottom">Delete course</md-tooltip>
             <md-icon md-svg-src='img/icons/ic_delete_black_18px.svg'></md-icon>
