--- a/client/css/style.css
+++ b/client/css/style.css
@@ -130,3 +130,35 @@ a:hover {
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
 }
+
+/* details */
+.subheader {
+    font-size: 20px;
+    font-weight: 300;
+    padding-left: 20px;
+    margin-top: -15px;
+}
+
+.description {
+    margin: 50px auto;
+    box-shadow: 1px 1px 5px rgb(170, 170, 170);
+    padding: 10px;
+}
+
+.description > .subheader {
+    margin: 0;
+    font-size: 20px;
+}
+
+.description > p {
+    padding: 0 5px;
+}
+
+.contact > p {
+    border-bottom: 1px solid rgb(204, 204, 204);
+    padding-bottom: 5px;
+}
+
+.info > span {
+    display: block;
+}
