--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -1,15 +1,26 @@
+<!-- application container -->
 <div layout="column" layout-fill>
 
-    <!-- top section -->
-    <md-toolbar class="md-medium-tall custom">
-        <div class="md-toolbar-tools">
-            <h1 class="logo" ng-click="goHome()">RWTH Courses</h1>
-            <span flex></span>
-            <md-button>Button</md-button>
-        </div>
-    </md-toolbar>
+    <!-- header -->
+    <header>
+        <md-toolbar class="md-medium-tall custom">
+            <div class="md-toolbar-tools">
+                <h1 class="logo" ng-click="goHome()">RWTH Courses</h1>
+                <span flex></span>
+                <md-button>Button</md-button>
+            </div>
+        </md-toolbar>
+    </header>
 
     <!-- main content -->
-    <md-content layout-padding ng-view ng-cloak></md-content>
+    <main ng-view ng-cloak flex layout="column" layout-padding></main>
+
+    <!-- footer -->
+    <footer>
+        <div layout="row" layout-align="center center">
+            <p>Coded with <3 by Group 123 - See on <a
+                    href="https://github.com/WebTech2-Group123/rwth-courses">GitHub</a></p>
+        </div>
+    </footer>
 
 </div>
