--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -16,11 +16,11 @@
     <main ng-view ng-cloak flex layout="column" layout-padding></main>
 
      <!--footer-->
-    <footer>
-        <div layout="row" layout-align="center center">
-            <p>Coded with <3 by Group 123 - See on <a
-                    href="https://github.com/WebTech2-Group123/rwth-courses">GitHub</a></p>
-        </div>
-    </footer>
+    <!--<footer>-->
+        <!--<div layout="row" layout-align="center center">-->
+            <!--<p>Coded with <3 by Group 123 - See on <a-->
+                    <!--href="https://github.com/WebTech2-Group123/rwth-courses">GitHub</a></p>-->
+        <!--</div>-->
+    <!--</footer>-->
 
 </div>
